# crabtalk

./: .gitignore  404.html  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  index.html  install.sh  introduction.html  manifesto.html  print.html  searcher-c2a407aa.js  searchindex-06a03477.js  searchindex-44fbef21.js  searchindex-7303227d.js  searchindex-8f92d67c.js  searchindex-963d9a59.js  searchindex-a7001dfe.js  searchindex-be77618b.js  searchindex-f7baf788.js  toc-18b7bade.js  toc-1cc83451.js  toc-65cc29f9.js  toc-ad84ca15.js  toc-b06bde72.js  toc.html
.cargo/: cc-x86_64-linux.sh  cc-x86_64.sh  config.toml
.github/workflows/: docs.yml  main.yml
apps/: README.md
apps/crabtalk/: Cargo.toml
apps/crabtalk/src/: foreground.rs  lib.rs
apps/crabup/: Cargo.toml
apps/crabup/src/: github.rs  lib.rs  list.rs  login.rs  manifest.rs  ps.rs  registry.rs  service.rs
apps/crabup/src/package/: manifest.rs  mod.rs
apps/crabup/src/plugin/: mod.rs
apps/cron/src/: entry.rs  lib.rs  runner.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: attach.rs  foreground.rs  lib.rs
apps/gateway/: Cargo.toml  README.md
apps/gateway/src/: command.rs  config.rs  lib.rs  message.rs  spawn.rs  stream.rs
apps/gateway/src/cmd/: mod.rs  serve.rs
apps/gateway/src/discord/: command.rs  mod.rs
apps/gateway/src/telegram/: command.rs  markdown.rs  mod.rs
apps/hub/: Cargo.toml
apps/hub/src/: lib.rs  manifest.rs  package.rs
apps/outlook/: Cargo.toml
apps/outlook/src/: config.rs  mcp.rs
apps/outlook/src/cmd/: mod.rs
apps/search/: Cargo.toml  README.md
apps/search/src/: aggregator.rs  cache.rs  config.rs  error.rs  lib.rs  mcp.rs
apps/search/src/browser/: fetch.rs
apps/search/src/cmd/: mod.rs  search.rs  serve.rs
apps/search/src/engine/: bing.rs  brave.rs  duckduckgo.rs  mod.rs  wikipedia.rs
apps/search/src/service/: launchd.plist  mod.rs  systemd.service
apps/telegram/: Cargo.toml  README.md
apps/telegram/src/: command.rs  lib.rs  serve.rs
apps/telegram/src/cmd/: serve.rs
apps/tui/: Cargo.toml  README.md
apps/tui/src/: tui.rs
apps/tui/src/cmd/: agent.rs  auth.rs  mcp.rs  mod.rs  reload.rs  service.rs
apps/tui/src/repl/: ask.rs  command.rs  input.rs  mod.rs  runner.rs
apps/wechat/: Cargo.toml  README.md
apps/wechat/src/: api.rs  lib.rs  serve.rs
crates/bench/: Cargo.toml
crates/bench/benches/: agent.rs  bm25.rs  codec.rs  conversation.rs  framework.rs  session_search.rs
crates/bench/src/: lib.rs  mock_mcp.rs
crates/bench/src/gateway/: crabtalk.rs  hermes.rs  mod.rs  openclaw.rs  opencode.rs
crates/channel/src/: config.rs  lib.rs  spawn.rs
crates/channel/src/discord/: command.rs
crates/channel/src/telegram/: command.rs
crates/cli/: Cargo.toml
crates/cli/src/cmd/: attach.rs  auth.rs  daemon.rs  external.rs  foreground.rs  hub.rs  mcp.rs  mod.rs  model.rs  sandbox.rs  service.rs  session.rs
crates/command-codegen/src/: lib.rs
crates/core/: Cargo.toml  build.rs
crates/core/proto/: crabtalk.proto  ext.proto  protocol.proto  walrus.proto
crates/core/src/: lib.rs  model.rs  paths.rs  storage.rs
crates/core/tests/: agent.rs  conversation.rs  history_pinning.rs  message.rs  runtime.rs  session.rs  tool_registry.rs
crates/crabtalk/: Cargo.toml  config.toml
crates/crabtalk/src/: bridge.rs  lib.rs  provider.rs
crates/crabtalk/tests/: config.rs  file.rs  memory.rs
crates/daemon/: Cargo.toml
crates/daemon/prompts/: system.md
crates/daemon/src/: cron.rs  lib.rs
crates/daemon/tests/: memory.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: client.rs  config.rs  lib.rs  stream.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: lib.rs
crates/hooks/src/memory/: mod.rs
crates/hooks/src/os/: edit.rs  mod.rs
crates/hooks/src/os/bash/: handler.rs  mod.rs
crates/hooks/src/skill/: handler.rs
crates/hooks/tests/: memory.rs  os.rs
crates/mcp/src/: bridge.rs  dispatch.rs  handler.rs  lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: dump.rs  error.rs  lib.rs  memory.rs
crates/memory/tests/: dump.rs  persist.rs
crates/model/: README.md
crates/model/src/: config.rs  convert.rs  lib.rs  manager.rs  provider.rs
crates/node/: Cargo.toml
crates/node/src/: builder.rs  lib.rs  node.rs
crates/node/tests/: config.rs  config_parsing.rs  file_tools.rs
crates/plugins/src/: manifest.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: ask_user.rs  backend.rs  bridge.rs  config.rs  conversation.rs  dispatch.rs  engine.rs  env.rs  hook.rs  host.rs  lib.rs  session.rs  task.rs
crates/runtime/tests/: dispatch.rs  engine.rs  file_tools.rs  skill_handler.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: client.rs  command.rs  conn.rs  daemon.rs  lib.rs  message.rs  stream.rs
crates/sdk/src/tools/: ask_user.rs  mod.rs
crates/sdk/src/tools/os/: edit.rs  mod.rs  read.rs
crates/sdk/src/tools/os/bash/: handler.rs
crates/tcp/src/: server.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs  mem.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  introduction.md  manifesto.md
docs/src/rfcs/: 0000-compaction.md  0001-compact-session.md  0018-protocol.md  0036-skill.md  0043-command.md  0043-component.md  0075-hook.md  0078-compact-session.md  0080-cron.md  0082-scoping.md  0150-memory-store.md  0184-crabup.md  0185-crabup.md  0185-session-search.md  0189-policy-at-the-edge.md  0193-agent-owned-mcp.md  README.md  superseded.md
docs/src/spec/: daemon.md
rfcs/: 0000-compaction.html  0009-transport.html  0018-protocol.html  0027-model.html  0036-skill.html  0038-memory.html  0043-component.html  0075-hook.html  0080-cron.html  0082-scoping.html  0121-event-bus.html  0135-agent-first.html  0150-memory-store.html  0171-topic-switching.html  0184-crabup.html  0185-crabup.html  0185-session-search.html  0189-policy-at-the-edge.html  0193-agent-owned-mcp.html  superseded.html
services/: README.md
services/cron/src/: lib.rs  runner.rs  store.rs
spec/: conversations.html  daemon.html  dispatch.html  memory.html  multi-agent.html  providers.html  runtime.html
(+235 files in other folders)
