[package]
name = "crabup"
description = "Version manager for the Crabtalk ecosystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "crabup"
path = "src/bin/main.rs"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]

[dependencies]
wcore.workspace = true

anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
flate2.workspace = true
indicatif.workspace = true
reqwest = { workspace = true, default-features = false, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
toml.workspace = true
