[package]
name = "crabtalkd"
description = "Crabtalk daemon — AI agent platform"
documentation = "https://docs.rs/crabtalk"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "crabtalkd"
path = "src/bin/main.rs"

[dependencies]
command.workspace = true
crabtalk.workspace = true
wcore.workspace = true

# crates.io
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
default = ["native-tls"]
native-tls = ["crabtalk/native-tls"]
rustls = ["crabtalk/rustls"]
