[package]
name = "walrus-gateway"
description = "Platform gateway (Telegram, Discord) for OpenWalrus agents"
documentation = "https://docs.rs/walrus-gateway"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
wcore.workspace = true
compact_str.workspace = true
futures-util.workspace = true
serde.workspace = true
serenity.workspace = true
teloxide.workspace = true
tokio.workspace = true
tracing.workspace = true
