[package]
name = "walrus-search"
description = "Meta search engine CLI with aggregated results from multiple backends"
keywords = ["search", "meta-search", "cli", "web-scraping"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "wsearch"
path = "src/bin/main.rs"

[dependencies]
clap.workspace = true
rand.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
percent-encoding.workspace = true
