[package]
name = "crabtalk-hooks"
description = "Reusable hook implementations and composition for the Crabtalk runtime"
documentation = "https://docs.rs/crabtalk-hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
crabllm-core.workspace = true
runtime.workspace = true
wcore.workspace = true

parking_lot.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

# Feature-gated
anyhow = { workspace = true, optional = true }
mcp = { workspace = true, default-features = false, features = ["hyper"], optional = true }
memory = { workspace = true, optional = true }
serde_yml = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = ["memory", "mcp", "os", "skill", "native-tls"]
memory = ["dep:memory", "dep:anyhow"]
mcp = ["dep:mcp", "dep:tokio"]
os = ["dep:tokio"]
skill = ["dep:anyhow", "dep:serde_yml"]
native-tls = ["mcp?/native-tls"]
rustls = ["mcp?/rustls"]

[dev-dependencies]
tempfile.workspace = true
